Update: dependência para autenticação no Thymeleaf.
Dependência thymeleaf-extras-springsecurity5 e arquivos para início da codificação.

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,10 @@
 			<artifactId>liquibase-maven-plugin</artifactId>
 			<version>${liquibase-maven-plugin.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 	</dependencies>
 
 	<profiles>
