--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -20,3 +20,7 @@ spring:
   liquibase:
     enabled: false
     change-log: database/db.changelog-dev.xml
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
