--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -24,3 +24,5 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+  resources:
+    static-locations: classpath:/static/,file:src/main/resources/static/
