--- a/pom.xml
+++ b/pom.xml
@@ -111,8 +111,14 @@
 			<artifactId>prettytime</artifactId>
 			<version>4.0.6.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-
+ju
 	<profiles>
 		<profile>
 			<id>dev</id>
