Feature: @squad2 Configuração de envio de email e rota para envio de email.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,3 +5,4 @@ spring.datasource.password=
 spring.h2.console.enabled=false
 spring.jpa.show-sql=true
 spring.liquibase.enabled=false
+spring.mail.test-connection=false
