Feat: @bruno.guerra
Possibilita a configuração da URL do servidor para uso nos templates de e-mail.

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -20,3 +20,6 @@ spring:
   liquibase:
     enabled: false
     change-log: database/db.changelog-dev.xml
+
+misc:
+  root-url: http://localhost:8080/
